Updated status, updated about, fixed spacing bug in about2.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -386,7 +386,7 @@
 
 	.frontPageLine {
 		margin-left: 2px; 
-		letter-spacing: 3px;
+		letter-spacing: 1px;
 		margin-bottom: 0px;
 	}
 
